[gd_scene load_steps=62 format=2]

<<<<<<< Updated upstream
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Run2.png" type="Texture" id=1]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Fall.png" type="Texture" id=2]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Slide.png" type="Texture" id=3]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Attack2.png" type="Texture" id=4]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Hit.png" type="Texture" id=5]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Roll.png" type="Texture" id=6]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Attack1.png" type="Texture" id=7]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Idle.png" type="Texture" id=8]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Attack3.png" type="Texture" id=9]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Jump.png" type="Texture" id=10]
[ext_resource path="res://joc lluita/Medieval Warrior (Version 1.2)/Medieval Warrior Pack/Death.png" type="Texture" id=11]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 736, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 920, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 736, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 920, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1104, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1288, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 1472, 0, 184, 137 )
=======
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Jump.png" type="Texture" id=1]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Death.png" type="Texture" id=2]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Attack1.png" type="Texture" id=3]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Fall.png" type="Texture" id=4]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Run.png" type="Texture" id=5]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Idle.png" type="Texture" id=6]
[ext_resource path="res://joc lluita/Hero Knight/Sprites/Attack2.png" type="Texture" id=7]
[ext_resource path="res://joc lluita/personatge1.gd" type="Script" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 720, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 900, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 1080, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 720, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 900, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 1080, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 180, 180 )
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
<<<<<<< Updated upstream
region = Rect2( 0, 0, 184, 137 )
=======
region = Rect2( 1260, 0, 180, 180 )
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
<<<<<<< Updated upstream
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 736, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 920, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1104, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1288, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 184, 0, 184, 137 )
=======
region = Rect2( 1440, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1620, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1800, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 720, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 900, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1080, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 1260, 0, 180, 180 )
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 6 )
<<<<<<< Updated upstream
region = Rect2( 368, 0, 184, 137 )
=======
region = Rect2( 0, 0, 180, 180 )
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 6 )
<<<<<<< Updated upstream
region = Rect2( 552, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 184, 0, 184, 137 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 368, 0, 184, 137 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "atac2",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "atac1",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "atac3",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "quiet",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "mort",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": false,
"name": "cau",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
=======
region = Rect2( 180, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 360, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 540, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 720, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 900, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1080, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1260, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1440, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1620, 0, 180, 180 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 1800, 0, 180, 180 )

[sub_resource type="SpriteFrames" id=51]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "atac",
"speed": 15.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "cau",
"speed": 9.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "atac2",
"speed": 8.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "salt",
"speed": 9.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "mort",
"speed": 9.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
>>>>>>> Stashed changes
"loop": true,
"name": "camina",
"speed": 12.0
}, {
<<<<<<< Updated upstream
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "voltereta",
"speed": 8.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ) ],
"loop": false,
"name": "deslliça",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ) ],
"loop": false,
"name": "salt",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": false,
"name": "mal",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 24.6473, 39.5888 )

[node name="personatge1" type="KinematicBody2D"]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 49 )
animation = "mal"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -6.92957, 17.3239 )
shape = SubResource( 50 )
=======
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ) ],
"loop": true,
"name": "quiet",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=52]
extents = Vector2( 19.323, 19.2901 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 10.1404, 15.8688 )

[node name="personatge1" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.18861, 6.5419 )
frames = SubResource( 51 )
animation = "atac2"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.39525, 7.20489 )
shape = SubResource( 52 )

[node name="cooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="hitbox_dreta" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_dreta"]
position = Vector2( 20.666, 7.86945 )
shape = SubResource( 53 )

[node name="hitbox_esquerra" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox_esquerra"]
position = Vector2( -28.9359, 7.50397 )
shape = SubResource( 53 )
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="body_entered" from="hitbox_dreta" to="." method="_on_hitbox_dreta_body_entered"]
>>>>>>> Stashed changes
